# translate_srt

./: .gitignore  README.md  pyproject.toml  subs-translate.py  translate_srt.py
.github/workflows/: py-ruff-lint.yaml  uv-pytest-coverage.yml  uv-pytest.yml
subs/: __init__.py
tests/: test_cli.py  test_cost_calculator.py  test_error_handling.py  test_language_validation.py  test_mocks.py  test_rate_limiter.py  test_srt_reader.py  test_translation_display.py
translate_srt/: __init__.py  __main__.py
