[project]
name = "subs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.59.7",
    "pytest-asyncio>=0.25.2",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "srt>=3.5.3",
    "tiktoken>=0.8.0",
]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
